# Digeiz-Trajectories

./: CMakeLists.txt  README.md  main.cpp  point.cpp  point.hpp  trajManager.cpp  trajManager.hpp  trajectory.cpp  trajectory.hpp
